# Kinect_3D_avatar

./: CMakeLists.txt  Camera.h  Joint.cpp  Joint.h  KinectJoints.csv  KinectJointsRealtime.csv  Polygon.cpp  Polygon.h  Position.cpp  Position.h  Shader.h  glad.c  main.cpp  utils.h
Matlab Scripts/: bodyDemo.m  bodyDemoWithWindow.m
Shaders/: fragmentShader.frag  skeletonVertShader.vert  vertexShader.vert
